added bitcoin graph with graph.js

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.1",
     "luno-api": "^1.1.0",
-    "menubar": "*"
+    "menubar": "*",
+    "moment": "^2.19.3"
   },
   "devDependencies": {
     "electron-packager": "^5.1.0",
